# APC_stateMachine

./: README.md
include/: VendingMachine.h  VendingMachine_events.h  VendingMachine_states.h  product.h
project/: CMakeLists.txt  main.cpp
project/include/: VendingMachine.h  VendingMachine_events.h  VendingMachine_states.h  product.h
project/src/: VendingMachine.cpp
src/: VendingMachine.cpp
